--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    //id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
     id "org.cadixdev.licenser" version "0.6.1"
     id "me.shedaniel.unified-publishing" version "0.1.+" apply false
     id "maven-publish"
@@ -28,6 +28,7 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
+    apply plugin: "build-src"
 
     loom {
         silentMojangMappingsLicense()
@@ -55,7 +56,6 @@ allprojects {
     apply plugin: "java"
     apply plugin: "architectury-plugin"
     apply plugin: "org.cadixdev.licenser"
-    apply plugin: "build-src"
 
     ext {
         isSnapshot = System.getenv("PR_NUM") != null
