--- a/common/build.gradle
+++ b/common/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     //coreImplementation sourceSets.annotations.output
 }
 buildSrc.commonSetup()
+buildSrc.setupTasks()
 
 architectury {
     common(rootProject.platforms.split(",")) {
