--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 }
 
 plugins {
-    id "architectury-plugin" version "3.4-SNAPSHOT"
+    // id "architectury-plugin" version "3.4-SNAPSHOT"
     //id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
     id "org.cadixdev.licenser" version "0.6.1"
     id "me.shedaniel.unified-publishing" version "0.1.+" apply false
@@ -22,6 +22,7 @@ buildSrc {
 
 System.out.println(buildSrc.module("annotations").transitiveDependencies)
 
+apply plugin: "architectury-plugin"
 architectury {
     minecraft = rootProject.minecraft_version
 }
