add architectury plugin transforms

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -21,5 +21,6 @@ gradlePlugin {
 
 dependencies {
     implementation "architectury-plugin:architectury-plugin.gradle.plugin:3.4-SNAPSHOT"
+    implementation "dev.architectury:architectury-transformer:5.2.83"
     implementation "dev.architectury:architectury-loom:1.6-SNAPSHOT"
 }
