--- a/common/build.gradle
+++ b/common/build.gradle
@@ -36,6 +36,7 @@ buildSrc.setupTasks()
 architectury {
     common(rootProject.platforms.split(",")) {
         it.platformPackage "neoforge", "forge"
+        buildSrc.setupArchitecturyPlugin(it)
     }
 }
 
