--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     implementation "architectury-plugin:architectury-plugin.gradle.plugin:3.4-SNAPSHOT"
     implementation "dev.architectury:architectury-transformer:5.2.83"
     implementation "dev.architectury:architectury-loom:1.6-SNAPSHOT"
+    implementation "com.github.johnrengelman:shadow:8.1.1"
 }
