--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-    id "com.github.johnrengelman.shadow" version "8.1.1"
     id "me.shedaniel.unified-publishing"
 }
+
+apply plugin: "com.github.johnrengelman.shadow"
 
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
