--- a/testmod-common/build.gradle
+++ b/testmod-common/build.gradle
@@ -1,11 +1,14 @@
 loom {
-    accessWidenerPath = project(':common').file("src/main/resources/architectury.accessWidener")
+    accessWidenerPath = project(':common').file("src/misc/resources/architectury.accessWidener")
 }
 
 dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
+    buildSrc.getModules().each {
+        implementation project(":common").sourceSets.maybeCreate(it.key).output
+    }
     implementation project(path: ":common", configuration: "namedElements")
 }
 
