--- a/neoforge/src/annotations/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/annotations/resources/META-INF/neoforge.mods.toml
@@ -4,24 +4,24 @@ issueTrackerURL = "https://github.com/shedaniel/architectury/issues"
 license = "GNU LGPLv3"
 
 [[mods]]
-modId = "architectury"
+modId = "architectury_annotations"
 version = "${version}"
-displayName = "Architectury"
+displayName = "Architectury Annotations"
 authors = "shedaniel"
 description = '''
-A intermediary api aimed to ease developing multiplatform mods.
+Annotations provided by Architectury API
 '''
 logoFile = "icon.png"
 license = "LGPL-3"
 
-[[dependencies.architectury]]
+[[dependencies.architectury_annotations]]
 modId = "minecraft"
 type = "required"
 versionRange = "[1.20.6,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.architectury]]
+[[dependencies.architectury_annotations]]
 modId = "neoforge"
 type = "required"
 versionRange = "[20.6.98-beta,)"
