--- a/neoforge/src/misc/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/misc/resources/META-INF/neoforge.mods.toml
@@ -4,9 +4,9 @@ issueTrackerURL = "https://github.com/shedaniel/architectury/issues"
 license = "GNU LGPLv3"
 
 [[mods]]
-modId = "architectury"
+modId = "architectury_misc"
 version = "${version}"
-displayName = "Architectury"
+displayName = "Architectury Misc"
 authors = "shedaniel"
 description = '''
 A intermediary api aimed to ease developing multiplatform mods.
@@ -14,16 +14,22 @@ A intermediary api aimed to ease developing multiplatform mods.
 logoFile = "icon.png"
 license = "LGPL-3"
 
-[[dependencies.architectury]]
+[[dependencies.architectury_misc]]
 modId = "minecraft"
 type = "required"
 versionRange = "[1.20.6,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.architectury]]
+[[dependencies.architectury_misc]]
 modId = "neoforge"
 type = "required"
 versionRange = "[20.6.98-beta,)"
 ordering = "NONE"
 side = "BOTH"
+
+[[mixins]]
+config = "architectury.mixins.json"
+
+[[mixins]]
+config = "architectury-common.mixins.json"
