--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildSrc {
     module("misc").dependsOn("extensions")
     module("misc").dependsOn("registry")
     module("registry").dependsOn("core")
+    module("registryBiomes").dependsOn("hooks")
     module("events").dependsOn("core")
     module("events").dependsOn("hooks")
     module("hooks").dependsOn("core")
