--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildSrc {
     module("misc").dependsOn("networking")
     module("misc").dependsOn("events")
     module("misc").dependsOn("hooks")
+    module("legacyExtensions").dependsOn("registry", "extensions", "hooks", "misc")
     module("misc").dependsOn("extensions")
     module("misc").dependsOn("registry")
     module("registry").dependsOn("core")
