--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildSrc {
     module("hooks").dependsOn("core", "extensions")
     module("networking").dependsOn("core", "events")
     module("extensions").dependsOn("core")
+    module("fluids").dependsOn("core")
 }
 
 System.out.println(buildSrc.module("annotations").transitiveDependencies)
