--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,8 @@ include("fabric")
 //include("forge")
 //include("minecraftforge")
 include("neoforge")
-//TODO include("testmod-common")
-//TODO include("testmod-fabric")
+include("testmod-common")
+include("testmod-fabric")
 //include("testmod-forge")
 //TODO include("testmod-neoforge")
 
