--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ buildSrc {
             .description("Miscellaneous APIs that have not been sorted into a module.")
             .mixin("fabric:architectury.mixins.json", "architectury-common.mixins.json")
             .dependsOn("core", "networking", "events", "hooks", "extensions", "registry", "fluids")
+
+    module("legacyItems")
+            .dependsOn("core", "fluids")
+
     module("legacyExtensions")
             .description("Deprecated interface injections.")
             .mixin("architectury-legacyExtensions.mixins.json")
