move more stuff out of misc

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildSrc {
 
     module("misc")
             .description("Miscellaneous APIs that have not been sorted into a module.")
-            .mixin("fabric:architectury.mixins.json", "architectury-common.mixins.json")
+            .mixin("fabric:architectury.mixins.json")
             .dependsOn("core", "networking", "events", "hooks", "extensions", "registry", "fluids")
 
     module("legacyItems")
