--- a/testmod-fabric/build.gradle
+++ b/testmod-fabric/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     // Depend on base mod too.
     implementation project(":common").sourceSets.main.output
+    implementation project(":fabric").sourceSets.main.output
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     common(project(path: ":testmod-common", configuration: "namedElements")) { transitive false }
